--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 /* Images created by: https://unsplash.com/@pawel_czerwinski */
+@import url("https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:wght@100;400;700&display=swap");
 
 html {
   box-sizing: border-box;
@@ -11,19 +12,35 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
+  font-family: Cabin, sans-serif;
   font-size: 12px;
 }
 
+/* Player container */
+.player-container {
+  height: 500px;
+  width: 400px;
+  background: #e7e8ea;
+  border-radius: 20px;
+  box-shadow: 0 15px 30px 5px rgba(0, 0, 0, 0.3);
 
+}
 
 .img-container {
-
+  height: 300px;
+  width: 300px;
   position: relative;
   top: -50px;
   left: 50px;
 }
 
+.img-container img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+  box-shadow: 0 5px 30px 5px rgba(0, 0, 0, 0.5);
+}
 
 h2 {
   font-size: 25px;
@@ -76,10 +93,7 @@ h3 {
   font-size: 30px;
   color: rgb(129, 129, 129);
   margin-right: 30px;
-
 }
-
-
 
 .main-button {
   font-size: 40px;
@@ -90,6 +104,9 @@ h3 {
 /* Media Query: iPhone (Vertical) */
 @media screen and (max-width: 376px) {
 
+  .player-container {
+    width: 95vw;
+  }
 
   .img-container {
     left: 29px;
